--- a/pages/bio.html
+++ b/pages/bio.html
@@ -9,25 +9,67 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 </head>
 <body>
-    <section class="about" id="bio">
-        <h1 class="heading">Shay's Bio</h1>
-        <div class="column">
-            <div class="images">
-                <img src="img/56A92A3F-AA14-4B00-980F-9C8D995D605A.JPEG" alt="">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio Website</title>
+    <link rel="stylesheet" href="experience.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
+</head>
+<body>
+    <div classs="container">
+         </div>
+        <nav>
+            <h2 class = "logo">Personal<span>folio.</span></h2>
+            <ul class="navItems">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="bio.html">Bio</a></li>
+                <li><a href="experience.html">Experience</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <a href="#" class="btn">DOWNLOAD CV</a>
+        </nav>
+    
+        <p class="masthead-intro">Hi, I'm</p> 
+        <h1 class="masthead-heading">Shay,</h1>
+    </header>
+  
+<!-- ***** About me ***** -->
+<section class="hero" id="about">
+    <img
+      src="img/self pic.JPEG"
+      alt="me"
+      loading="lazy"
+      class="hero-img"
+      />
+    </div>
+    <p>I'm a beginner coder so i have mush to learn, I beleive once bootcamp over i'll be mostly dealling with front-end project. I currently have a job at a company called Intermountain Healthcare as a sharepoint application analyst.  </p>
+</section>
 
-            </div>
+<section class="location">
+    <h1>Where Are You</h1>
+    <p>I'm currently living in the sunshine state Florida</p>
+</section>
 
-        </div>
+<section class="questions">
+    <h1>More About Me</h1>
 
-    </section>
-            </div>
-            <div class="social">
-                <a href=""><i class="fab fa-linkedin"></i></a>
-                <a href=""><i class="fab fa-github"></i></a>
-                <a href=""><i class="fab fa-instagram"></i></a>
+      <h2>What is important to you?</h2>
 
-            </div>
-        </div>
+       <p>Aside from my family, I'm starting to put my mental health above all.</p>
+
+      <h2>Favorite Hobbies?</h2>
+
+       <p>I love to read anuthing fiction, thanks to my middle school library.</p>
+
+      <h2> Dream </h2>
+
+       <p>I hope to retire my mom soon, and bulid a small little food place or restaurants for her to run as a side gig.</p>
+</section>
 
 </body>
 </html>
