--- a/pages/bio.html
+++ b/pages/bio.html
@@ -21,7 +21,6 @@
                 <li><a href="bio.html">Bio</a></li>
                 <li><a href="experience.html">Experience</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>
             </ul>
             <a href="#" class="btn">DOWNLOAD CV</a>
         </nav>
@@ -30,6 +29,7 @@
         <h1 class="masthead-heading">Shay,</h1>
     </header>
   
+<div class="container">
 
 <section class="hero" id="about">
     <img
@@ -38,17 +38,16 @@
       loading="lazy"
       class="hero-img"
       />
-    </div>
-    <p>I'm a beginner coder so i have mush to learn, I beleive once bootcamp over i'll be mostly dealling with front-end project. I currently have a job at a company called Intermountain Healthcare as a sharepoint application analyst.  </p>
+
 </section>
 
 <section class="location">
+    <p>I'm a beginner coder so i have mush to learn, I beleive once bootcamp over i'll be mostly dealling with front-end project. I currently have a job at a company called Intermountain Healthcare as a sharepoint application analyst. </p>
     <h1>Where Are You</h1>
     <p>I'm currently living in the sunshine state Florida</p>
-</section>
+<!-- </section> -->
 
-<section class="questions">
-    <h1>More About Me</h1>
+<!-- <section class="questions"> -->
 
       <h2>What is important to you?</h2>
 
@@ -58,10 +57,11 @@
 
        <p>I love to read anuthing fiction, thanks to my middle school library.</p>
 
-      <h2> Dream </h2>
+       <h2> Dream </h2>
 
        <p>I hope to retire my mom soon, and bulid a small little food place or restaurants for her to run as a side gig.</p>
-</section>
+ </section>
+</div>
 
 </body>
 </html>
